--- a/NTU-OOP-Classes/.project
+++ b/NTU-OOP-Classes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NTU-OOP</name>
+	<name>NTU-OOP-Classes</name>
 	<comment></comment>
 	<projects>
 	</projects>
