--- a/NTU-OOP-Classes/src/composition/.gitignore
+++ b/NTU-OOP-Classes/src/composition/.gitignore
@@ -4,3 +4,8 @@
 /TestBook.class
 /NewBook.class
 /TestNewBook.class
+/MyPoint.class
+/TestMyPoint.class
+/TenPointTest.class
+/MyCircle.class
+/TestMyCircle.class
